# cpp-jarvis

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  codeql.yml
docs/: Doxyfile
include/: ApiHandler.h  AudioMessage.h  Jarvis.h  Mic.h  Speaker.h  SpeechToText.h  TextToSpeech.h  api.h  audio.h  jarvis.h  physical_interface.h  speech_to_text.h  text_to_speech.h
src/: ApiHandler.cpp  AudioMessage.cpp  Jarvis.cpp  Mic.cpp  Speaker.cpp  SpeechToText.cpp  TextToSpeech.cpp  api.cpp  audio.cpp  jarvis.cpp  main.cpp  physical_interface.cpp  speech_to_text.cpp  text_to_speech.cpp
